syntax = "proto3";

package auth;
option go_package = "./;auth_svc";

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string jwt_token =
      1; // Remove optional since Connect handles nullability differently
}

service AuthService {
  // Authenticates a user and returns a JWT.
  rpc Authenticate(AuthRequest) returns (AuthResponse);
}
